garmin loading message & resume

--- a/source/slot0/resume.html
+++ b/source/slot0/resume.html
@@ -1,26 +1,29 @@
 ---
 layout: page
-title: "Resume"
+title: "About me"
 date: 2012-01-23 23:32
-comments: true
+comments: false
 sharing: true
 footer: true
+sidebar: false
 ---
 
+
+
+<h2>Contact</h2>
 <div id="resume">
 <div id="contact-info" class="vcard">
     <p>
         Móvil: <span class="tel">617373112</span> <br />
         Email: <a class="email" href="mailto:csegura@ideseg.com">csegura@ideseg.com</a> <br />
+		Twitter: <a href="https://twitter.com/romheat" class="twitter-follow-button" data-show-count="false">Follow @romheat</a>
+		
     </p>
 </div>
 
-<div id="objective">
+<div id="info">
     <p>
-        I am an outgoing and energetic (ask anybody) young professional, seeking a 
-        career that fits my professional skills, personality, and murderous tendencies. 
-        My squid-like head is a masterful problem solver and inspires fear in who gaze upon it. 
-        I can bring world domination to your organization. 
+        ... 
     </p>
 </div>
 
@@ -40,11 +43,11 @@ footer: true
 		<p>Sql Server / Multibase / MySQL / MongoDB</p>	 
 		
         <h2>Other experience</h2>
-		<p>Developing SaaS and enterprise software applications</p>
-		<p>Agile, iterative, and test-driven development methods</p>
+		<p>Developing SaaS and enterprise software applications<br/>
+		Agile, iterative, and test-driven development methods</p>
 		
-        <h2>Computer skills</h2>
-        <p>Microsoft productivity software (Word, Excel, etc), Adobe Creative Suite, Windows</p>
+        <h2>as CIO<span>please contact</span></h2>
+        <p></p>
     </dd>
     <dd class="clear"></dd>
 
@@ -81,7 +84,8 @@ footer: true
 			<span class="year">'91 - '94</span> <span class="years">3</span> Analist & Programmer (QUATTRO) [Spain]<br />
 		</p>
     </dd>
-
+	<dd class="clear"></dd>
+	
 	<dt>Formación Education</dt>
     <dd>
         <p>            
@@ -90,62 +94,19 @@ footer: true
 			<span class="year">'94</span> Técnico especialista en informática de gestion (Roncesvalles)<br />
 		</p>
     </dd>
-
-    <dt>Formación</dt>
-    <dd>
-        <h2>Withering Madness University - Planet Vhoorl</h2>
-        <p>
-			<strong>Major:</strong> Public Relations<br />
-            <strong>Minor:</strong> Scale Tending
-		</p>
-    </dd>
-
-    <dd class="clear"></dd>
-
-    <dt>Skills</dt>
-    <dd>
-        <h2>Office skills</h2>
-
-        <p>Office and records management, database administration, event organization, customer support, travel coordination</p>
-
-        <h2>Computer skills</h2>
-        <p>Microsoft productivity software (Word, Excel, etc), Adobe Creative Suite, Windows</p>
-    </dd>
-
-    <dd class="clear"></dd>
-
-    <dt>Experience</dt>
-    <dd>
-
-        <h2>Doomsday Cult <span>Leader/Overlord - Baton Rogue, LA - 1926-2010</span></h2>
-        <ul>
-            <li>Inspired and won highest peasant death competition among servants</li>
-            <li>Helped coordinate managers to grow cult following</li>
-            <li>Provided untimely deaths to all who opposed</li>
-        </ul>
-
-
-        <h2>The Watering <span>Bartender/Server - Milwaukee, WI - 2009</span></h2>
-        <ul>
-            <li>Worked on grass-roots promotional campaigns</li>
-            <li>Reduced theft and property damage percentages</li>
-            <li>Janitorial work, Laundry</li>
-        </ul> 
-    </dd>
-
-
-    <dd class="clear"></dd>
-
+	<dd class="clear"></dd>
+	
     <dt>Hobbies</dt>
-    <dd>World Domination, Deep Sea Diving, Murder Most Foul</dd>
-
+    <dd>
+		<p>Running, Bike, Triathlon</p>
+		<p>Electronics - HowStuffWork :-)</p>
+		<p>Computer Books</p>
+	</dd>
     <dd class="clear"></dd>
-
-    <dt>References</dt>
-    <dd>Available on request</dd>
-
-    <dd class="clear"></dd>
-
 </dl>
 
 </div>
+
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+</script>
