--- a/source/slot0/resume.html
+++ b/source/slot0/resume.html
@@ -13,11 +13,13 @@ sidebar: false
 <h2>Contact</h2>
 <div id="resume">
 <div id="contact-info" class="vcard">
-    <p>
+	<p>
+		<span class="links">
+			<a href="http://http://www.linkedin.com/profile/view?id=13778322"><img src="/images/linkedin_ico.png" />Carlos Segura</a><br/>	
+			<a href="https://twitter.com/romheat" class="twitter-follow-button" data-show-count="false">Follow @romheat</a>	
+		</span>
         Móvil: <span class="tel">617373112</span> <br />
-        Email: <a class="email" href="mailto:csegura@ideseg.com">csegura@ideseg.com</a> <br />
-		Twitter: <a href="https://twitter.com/romheat" class="twitter-follow-button" data-show-count="false">Follow @romheat</a>
-		
+        Email: <a class="email" href="mailto:csegura@ideseg.com">csegura@ideseg.com</a>
     </p>
 </div>
 
