--- a/source/slot0/resume.html
+++ b/source/slot0/resume.html
@@ -15,7 +15,7 @@ sidebar: false
 <div id="contact-info" class="vcard">
 	<p>
 		<span class="links">
-			<a href="http://www.linkedin.com/profile/view?id=13778322"><img src="/images/linkedin_ico.png" /></a><br/>	
+			<a href="http://es.linkedin.com/pub/carlos-segura/4/745/696"><img src="/images/linkedin_ico.png" /></a><br/>	
 			<a href="https://twitter.com/romheat" class="twitter-follow-button" data-show-count="false">Follow @romheat</a>	
 		</span>
         Móvil: <span class="tel">617373112</span> <br />
